# Spectrum-to-Molecular

./: .gitmodules  README.md  pyproject.toml  test.txt
data/: .gitignore
data/predprocessing/: build_fp2mol_datasets.py
notebooks/: MassSpecGym_load.ipynb
notebooks/data_extraction/: MassSpecGym_preparation.ipynb  hrms_db_predprocessing.ipynb
notebooks/data_extraction_stage1/: coconut_predprocessing.ipynb  hmdb_dataset_preparation.ipynb
notebooks/data_predprocessing/: DiffMs_data_predprocessing_explained.ipynb
notebooks/data_predprocessing/data/: data.py  datasets.py
notebooks/data_predprocessing_exploration_stage2/: SpectraDataset_and_Dataloader.ipynb  data_processors_modules_examples.ipynb
notebooks/data_predprocessing_exploration_stage2/processors/: processors_diffms.py
notebooks/mist_encoder_exploration_stage3/: mistspectral_encoder.ipynb  mistspectral_encoder_complete_traning_pipeline.ipynb  some_dfaft_code.ipynb
notebooks/mist_encoder_exploration_stage3/models/: form_embedders.py  modules.py  spectra_encoder.py
notebooks/mist_encoder_exploration_stage3/processors/: processors_diffms.py
notebooks/predprocessing/: MassSpecGym_preparation.ipynb  bimols_prepdprocessing.ipynb  canopus_preparation.ipynb  casmi22_predprocessing.ipynb  dsstox_dataset.ipynb  hmdb_dataset_preparation.ipynb  moses_predprocessing.ipynb
services/DiffMS/data_processing/: build_fp2mol_datasets.py
services/DiffMS/scripts/: spec2mol_train.sh
services/DiffMS/src/: diffusion_model_fp2mol.py  diffusion_model_spec2mol.py  spec2mol_main.py
src/: utils.py
(+3 files in other folders)
