[tool.poetry]
name = "spectrum-to-molecular"
version = "0.1.0"
description = "Molecular structure prediction from spectral data using hybrid AI methods"
authors = ["IVproger <i.golov@innopolis.university>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.6.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
hydra-core = "1.3.2"
omegaconf = "2.3.0"
overrides = "7.3.1"
pytorch_lightning = "2.0.4"
setuptools = "68.0.0"
torch_geometric = "2.3.1"
torchmetrics = "0.11.4"
tqdm = "*"
wandb = "*"
h5py = "*"
seaborn = "*"
myopic-mces = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
